v 1.1.3.2 (29 jul)
Hydro Plant Turbines.
Broadcast Towers will no longer affect happiness.

Broadcast tower price and ratio were slightly increased
Broadcast tower culture bonus was reduced from 500 to 300

v 1.1.3.1 (26 jul)
Cold Fusion
Satellite Radio

Production penalty will be now proportional to energy delta
Production penalty can be completely disabled in the options

v 1.1.3.0 (25 jul)
Changes by cgyllensvrd:

Internet/Photolithography
___
Radio Towers
Correct formatting for Apocrypha bonus
Happiness tooltip will be more informative
Sunlifters will generate antimatter once per year


v 1.1.2.1 (19 jul)
Changes by coderpatsy:

Fix trade messages saying timeCrystal
Format numbers when sacrificing unicorns
Fix mixing ":"s in left-hand crafting menu
__
Hydro Plants production was reduced from 10 to 5
Sunlifters energy production was slightly increased


v 1.1.2.0 (16 jul)
Changes by irxground:

Fixed census sorting
______
Hydro Plants

v 1.1.1.6 (15 jul)
Changes by coderpatsy:

Game page tab titles will be now correctly updated
______
Oil Well will require energy only if Pumpjack is researched
Fixed an issue with dropbox import

v 1.1.1.5 (14 jul)
Changes by coderpatsy:

Only display production penalty in tooltip if total energy is < 0
Added a space between "Leader:" and the leader's name
___

Solar Satellites
Energy requirement for Space Elevators removed
Happiness toolbar icon
Overpopulation

Fixed bug where player had to upgrade pastures twice.

v 1.1.1.4 (13 jul)
Planetary cycles

v 1.1.1.3 (13 jul)
Production bonus for leader based on rank
Promotion will now require gold

v 1.1.1.2 (13 jul)
Changes by coderpatsy:

Chronospheres ignore Alicorns and Necrocorns (thanks /u/underpantscannon)
External links open in a new tab/window
Don't show a kitten's skill level if <= 0
______

Geodesy will now require Archeology as a prereq


v 1.1.1.1 (12 jul)
Census UI cleanup
Census kittens will be now automatically sort by their experience
