@@ -5,6 +5,8 @@ Broadcast Towers will no longer affect happiness.
 Broadcast tower price and ratio were slightly increased
 Broadcast tower culture bonus was reduced from 500 to 300
 
+A bit of new flavors and village names
+
 v 1.1.3.1 (26 jul)
 Cold Fusion
 Satellite Radio
